Updates from Overleaf

--- a/chap2-motivation_for_steriles.tex
+++ b/chap2-motivation_for_steriles.tex
@@ -1,7 +1,7 @@
 \chapter{Neutrino Physics}
 \label{chap:Neutrino Physics}
 
-This chapter begins with a historical overview of neutrino discoveries in \SectionRef{sec:history_of_neutrino_flavours}. Some of the key properties of neutrino physics are then discussed in \SectionRef{sec:neutrino_physics} along with the associated experiments. These include helicity, chirality, the weak interaction and neutrino oscillations. Finally, some of the experimental results that point towards the possible existence of light sterile neutrinos are described in \SectionRef{subchap:Motivation for Sterile Neutrinos} along with possible mass generation mechanisms and neutrino oscillations with the inclusion of sterile neutrino states in \SectionRef{subchap:Theory of Sterile Neutrinos}.
+This chapter begins with a historical overview of neutrino discoveries in \SectionRef{sec:history_of_neutrino_flavours}. Some of the key properties of neutrino physics are then discussed in \SectionRef{sec:neutrino_physics} along with the associated experiments. These include the weak interaction, \gls{cp} violation, possible mass generation mechanisms and neutrino oscillations. Finally, neutrino physics in the context of sterile neutrinos is considered with a discussion of experimental results that are either in favour of the possible existence of light sterile neutrinos and those that disfavour their existence. 
 
 \section{A Brief History of Neutrinos}\label{sec:history_of_neutrino_flavours}
 
@@ -23,7 +23,7 @@ It was understood that electromagnetic and strong interactions conserved parity,
 \end{equation}
 Under the assumption that parity was conserved, it was expected that the number of electrons emitted in the \textit{forward} hemisphere would be equal to the number emitted in the \textit{backwards} hemisphere with respect to the spin of the decaying cobalt because parity reverses particle momenta whilst the spin angular momentum remains unchanged. It was, however, observed that the majority of the electrons decayed in the direction opposite to the nuclear spin. This asymmetry lead the confirmation of parity violation in weak interactions \cite{MartinandShaw}\cite{Wu_experiment}. It has also been observed that neutrinos and anti-neutrinos appear to only exist as having left and right handed helicity respectively. This was demonstrated by the Goldhaber experiment (which is discussed in \SectionRef{subsubsec:Theory of Weak Interactions}) and shows that weakly interacting neutrinos violate parity since the parity operator converts left handed neutrinos to their right handed counterpart. Additionally, charge invariance is violated since it requires identical weak interactions for both neutrinos and anti-neutrinos, however, charge-parity conjugation is still conserved \cite{Majorana2020}\cite{Goldhaber_experiment}. 
 
-The three confirmed flavours of neutrinos ($\nu_e, \nu_{\mu}, \nu_{\tau}$) are consistent with predictions from the \Gls{sm}. The number of active neutrinos may be determined from the decay of the Z boson since its lifetime is dependent on the number of flavours. This was shown by the \gls{lep} experiment, which found the lifetime of the Z boson to be consistent with a three neutrino model \cite{Zboson_number_of_neutrinos}\cite{LEP}. There have, however, been results from experiments which are inconsistent with the 3 neutrino framework. Namely the excess of events observed by the \gls{lsnd} and \gls{miniboone} experiments, the deficit of events observed by the \gls{sage} and \gls{gallex} detectors (dubbed the \textit{Gallium Anomaly}) and the deficit of events observed from nuclear reactors (dubbed the \textit{Reactor Anomaly}) \cite{LSND_excess} \cite{MiniBooNE_excess} \cite{GALLEX} \cite{Gallex_reanalysis} \cite{SAGE} \cite{Reactor_anomaly}. Additional neutrino flavours may exist and not contradict the statement on the lifetime of the Z boson if they have a mass greater than half that of the Z boson and/or they do not weakly interact and hence do not contribute to the decay rate of the Z boson \cite{Zboson_number_of_neutrinos}. The hypothetical neutrinos which do not weakly interact are know as \textit{sterile} neutrinos in order to distinguish them from the \textit{active} ones that do. Sterile neutrinos will be discussed in greater detail in \SectionRef{subchap:Motivation for Sterile Neutrinos} and \SectionRef{subchap:Theory of Sterile Neutrinos}.
+The three confirmed flavours of neutrinos ($\nu_e, \nu_{\mu}, \nu_{\tau}$) are consistent with predictions from the \Gls{sm}. The number of active neutrinos may be determined from the decay of the Z boson since its lifetime is dependent on the number of flavours. This was shown by the \gls{lep} experiment, which found the lifetime of the Z boson to be consistent with a three neutrino model \cite{Zboson_number_of_neutrinos}\cite{LEP}. There have, however, been results from experiments which are inconsistent with the 3 neutrino framework. Namely the excess of events observed by the \gls{lsnd} and \gls{miniboone} experiments, the deficit of events observed by the \gls{sage} and \gls{gallex} detectors (dubbed the \textit{Gallium Anomaly}) and the deficit of events observed from nuclear reactors (dubbed the \textit{Reactor Anomaly}) \cite{LSND_excess} \cite{MiniBooNE_excess} \cite{GALLEX} \cite{Gallex_reanalysis} \cite{SAGE} \cite{Reactor_anomaly}. Additional neutrino flavours may exist and not contradict the statement on the lifetime of the Z boson if they have a mass greater than half that of the Z boson and/or they do not weakly interact and hence do not contribute to the decay rate of the Z boson \cite{Zboson_number_of_neutrinos}. The hypothetical neutrinos which do not weakly interact are know as \textit{sterile} neutrinos in order to distinguish them from the \textit{active} ones that do. Sterile neutrinos will be discussed in greater detail in \SectionRef{subsec:Neutrino Oscillations}.
 
 \section{Overview of Neutrino Physics}\label{sec:neutrino_physics}
 
@@ -125,7 +125,7 @@ Vector
 \label{fig:particle_classifications}
 \end{figure}
 
-Since neutrinos are neutral fermions, it is possible that neutrinos are their own anti-particle (a Majorana Particle). This idea was first proposed in 1937 by Majorana \cite{Majorana2020}. Within the \Gls{sm}, all fermions with the possible exception of neutrinos behave as Dirac fermions, that is, the particle and anti-particle are distinct \cite{dirac_majorana_neutrinos}. With the possibility that neutrinos are Majorana in nature, it has led to the search for neutrinoless double beta decay \cite{Double_beta_decay}. This is a variation on ordinary double beta decay in which a nucleus decays by emitting two electrons simultaneously. In ordinary double beta decay, there would also be two (anti)neutrinos in the final state, however, if neutrinos are Majorana particles, it can be thought of as one nucleon emitting a neutrino and the other absorbing it hence there are no neutrinos in the final state. Observation of such a decay would confirm the Majorana nature of neutrinos and give direct evidence for physics beyond the \Gls{sm} since the lepton number would not be conserved. Furthermore, neutrino oscillations (which is discussed in \SectionRef{subsec:Neutrino Oscillations}) are at odds with the \gls{sm} assumption that neutrinos are massless. With the requirement that neutrinos are indeed massive, the Dirac or Majorana nature of neutrinos is again discussed in \SectionRef{subsec:Neutrino Mass} within the context of mass generation mechanisms \cite{The_physics_of_neutrinos_book}.
+Since neutrinos are neutral fermions, it is possible that neutrinos are their own anti-particle (a Majorana Particle). This idea was first proposed in 1937 by Majorana \cite{Majorana2020}. Within the \Gls{sm}, all fermions with the possible exception of neutrinos behave as Dirac fermions, that is, the particle and anti-particle are distinct \cite{dirac_majorana_neutrinos}. With the possibility that neutrinos are Majorana in nature, it has led to the search for neutrinoless double beta decay \cite{Double_beta_decay}. This is a variation on ordinary double beta decay in which a nucleus decays by emitting two electrons simultaneously. In ordinary double beta decay, there would also be two (anti)neutrinos in the final state, however, if neutrinos are Majorana particles, it can be thought of as one nucleon emitting a neutrino and the other absorbing it hence there are no neutrinos in the final state. Observation of such a decay would confirm the Majorana nature of neutrinos and give direct evidence for physics beyond the \Gls{sm} since the lepton number would not be conserved. Furthermore, neutrino oscillations (which is discussed in \SectionRef{subsec:Neutrino Oscillations}) are at odds with the \gls{sm} assumption that neutrinos are massless. With the requirement that neutrinos are indeed massive, the Dirac or Majorana nature of neutrinos is again discussed in \SectionRef{subsec:nutrino_mass} within the context of mass generation mechanisms \cite{The_physics_of_neutrinos_book}.
 
 \subsection{Neutrinos within the Standard Model}
 
@@ -523,9 +523,9 @@ Since the strong interaction appears to conserve \gls{cp} and the \gls{cp} viola
 
  
 
-\subsection{Neutrino Masses}\label{subchap:Theory of Sterile Neutrinos}
+\subsection{Neutrino Masses}\label{subsec:nutrino_mass}
 
-Assuming that the mass generation of neutrinos follows similar rules to that of other Dirac mass terms, there is motivation to try and attempt to include sterile neutrinos into theoretical models since right-handed fields are required. Some of the potential options for neutrino mass generation are discussed in \SectionRef{subsec:Neutrino Mass}. The initial mass scale for sterile neutrinos is unconstrained, however, one of the more well-motivated models is the "Type 1" \textit{seesaw model} which attempts to explain the relative size of neutrino masses and points towards very heavy sterile neutrino masses ($\gg ~1$ eV). Variations of the Seesaw model have also been proposed that incorporate light sterile neutrinos \cite{White_Paper}.
+Assuming that the mass generation of neutrinos follows similar rules to that of other Dirac mass terms, there is motivation to try and attempt to include sterile neutrinos into theoretical models since right-handed fields are required. Some of the potential options for neutrino mass generation are discussed below. The initial mass scale for sterile neutrinos is unconstrained, however, one of the more well-motivated models is the "Type 1" \textit{seesaw model} which attempts to explain the relative size of neutrino masses and points towards very heavy sterile neutrino masses ($\gg ~1$ eV). Variations of the Seesaw model have also been proposed that incorporate light sterile neutrinos \cite{White_Paper}.
 
 The \gls{sm} Lagrangian, $\mathcal{L}$, for a fermion is given by
 \begin{equation}\label{eqn:SM Lagrangian}
@@ -619,11 +619,11 @@ A number of cosmological observations have put upper bounds on the neutrino mass
 
 By combining \textit{Planck} data with that from baryon acoustic oscillations (BAO) and Type Ia supernovae the total neutrino mass, $\sum m_\nu = m_1 + m_2 + m_3$, may be constrained to have an upper mass limit as low as 0.11 eV at the 95\% confidence level \cite{PDG_2022}\cite{planck_2018}.
 
-\subsection{Neutrino Oscillations}
+\subsection{Neutrino Oscillations}\label{subsec:Neutrino Oscillations}
 
 Another unique property of neutrinos are their ability to oscillate. That is, the neutrino flavour may change as it propagates. This phenomenon was first proposed by Pontecorvo in 1957 \cite{Pontecorvo}. In the following years, this work was built upon by Maki, Nakagawa, Sakata and Pontecorvo himself \cite{MNS_oscillations}. 
 
-\subsubsection{3 Flavour Oscillation Phenomenology}\label{subsec:Neutrino Oscillations}
+\subsubsection{3 Flavour Oscillation Phenomenology}
 
 Neutrino oscillations is one of the key topics in the field and this thesis. The remainder of this section will discuss the theory of neutrino oscillations in both vacauum and in matter. The three flavour states (\nue, \numu, \nutau) have already been established,
 but it is expected that the neutrino mass states \mbox{(\nuone, \nutwo, \nuthree)} are distinct in order to explain neutrino oscillations. The flavour eigenstate of a neutrino is what is observed, however, each flavour state is a superposition of the three mass states. As a neutrino propagates, the relative phase between the mass states is continuously changing. When a neutrino then interacts, the mass states may have a relative phase that is different to that when the neutrino was created. At the point of interaction, the flavour superposition will then collapse into a single flavour and this is what is then detected. This is the mechanism which allows neutrino flavours to oscillate. 
@@ -1035,7 +1035,7 @@ Since \gls{minos} is sensitive to $10^{-3} \lesssim \Delta m^2 \lesssim 10^2$ eV
     \centering
     \includegraphics[width = \smallfigwidth]{figures-chap2/minos_spectra.png}
     \includegraphics[width = \smallfigwidth]{figures-chap2/minos_contour.png}
-    \caption[Ratio of energy spectra in the far and near detector of \gls{minos} plus exclusion contours ($\sin^2{\theta_{24}}$, $\Delta m^2_{41}$) space.]{Left: The ratio of energy spectra from the far detector to the near detector of \gls{minos} for both CC and NC samples. Right: Exclusion contours from \gls{minos} at the 90\% and 95\% confidence level along with external limits \cite{minos}.}
+    \caption[Ratio of energy spectra in the far and near detector of \gls{minos} plus exclusion contours ($\sin^2{\theta_{24}}$, $\Delta m^2_{41}$) space.]{Left: The ratio of energy spectra from the far detector to the near detector of \gls{minos} for both CC and NC samples. Right: Exclusion contours from \gls{minos} at the 90\% and 95\% confidence level along with external limits \cite{MINOS}.}
     \label{fig:minos_spectra_contour}
 \end{figure}
 
