--- a/chap5-oscillation_inputs.tex
+++ b/chap5-oscillation_inputs.tex
@@ -1,7 +1,7 @@
 \chapter{Sterile Neutrino Oscillation Inputs Within SBN}
 \label{chap:osc_inputs}
 
-In order to perform an oscillation analysis, a number of inputs and analysis choices are required. Typically this involves generating some event sample in each detector for a given analysis, applying a physics hypothesis and some set of systematic uncertainties. A fit comparing the observed and predicted event rate is then performed giving the confidence level of the applied physics hypothesis. This is summarised in \FigureRef{fig:analysis_paradigm} which shows the generic overview of the procedure coupled with the different components. Many of these items are common to all oscillation analyses and are agnostic to the fitting framework. The remainder of this chapter gives details of the VALOR neutrino fitting framework which is used to perform the oscillation analysis in this thesis, highlights some of the key inputs to the analysis and details some of the decisions that were made. The actual analysis results are discussed in \SectionRef{chap:VALOR}.
+In order to perform an oscillation analysis, a number of inputs and analysis choices are required. Typically this involves generating some event sample in each detector for a given analysis, applying a physics hypothesis and some set of systematic uncertainties. A fit comparing the observed and predicted event rate is then performed giving the confidence level of the applied physics hypothesis. This is summarised in \FigureRef{fig:analysis_paradigm} which shows the generic overview of the procedure coupled with the different components. Many of these items are common to all oscillation analyses and are agnostic to the fitting framework. The remainder of this chapter gives details of the VALOR neutrino fitting framework which is used to perform the oscillation analysis in this thesis, highlights some of the key inputs to the analysis and details some of the decisions that were made. The actual analysis results are discussed in \ChapterRef{chap:VALOR}.
 
 \begin{figure}[!h]
     \centering
@@ -210,7 +210,8 @@ The reaction modes define the topology of neutrino interactions. Categorising ne
 
   \end{tabular}
   \caption[Coarse Reaction Modes.]{The \textit{coarse} reaction modes used for both the \numu and \nue channels. These are a broader definition of the reaction modes where one or more of the \textit{fine} reaction modes listed in \TableRef{table:fine_reac_modes} would come under the umbrella of a given coarse reaction mode.}
-\end{table}\label{table:coarse_reac_modes}
+  \label{table:coarse_reac_modes}
+\end{table}
 
 \clearpage
 \section{Systematic Uncertainties}\label{sec:syst_uncertainties}
