--- a/chap2-motivation_for_steriles.tex
+++ b/chap2-motivation_for_steriles.tex
@@ -600,7 +600,7 @@ This is the idea that underpins the \gls{katrin} which uses tritium as the nucle
 \begin{figure}[h!]
     \centering
     \includegraphics[width = \largefigwidth]{figures-chap2/Schematics-of-the-Katrin-experiment.png}
-    \caption{Schematic of the \gls{katrin} detector \cite{KATRIN_detector_figure}.}
+    \caption[Schematic of the \gls{katrin} detector.]{Schematic of the \gls{katrin} detector \cite{KATRIN_detector_figure}.}
     \label{fig:katrin_detector}
 \end{figure}
 
@@ -796,7 +796,9 @@ It is understood from oscillation experiments that $\Delta m_{21}^2$, known as t
 
 A key feature of \EquationRef{eqn:matter_mixing_angle} is that the matter mixing angle depends on the sign of $\Delta m^2$. This is not the case for vacuum oscillations. The sign of $\Delta m^2_{21}$ was determined using the matter effect by comparing day and night solar neutrino interactions in \gls{sk}. An asymmetry in the day/night flux of \nue's was observed because during the night, neutrinos travel through the earth and thus the matter effect becomes relevant whereas during the day, the matter that neutrinos traverse is negligible. Therefore, unlike vacuum oscillations, matter oscillations may be used to determine the neutrino mass hierarchy within a 2-flavour approximation.
 
+\begin{comment}
 In order to determine the mass hierarchy using vacuum oscillations, the full 3-flavour oscillation probability must be used with the requirement that a given experiment is sensitive to both $\Delta m^2_{21}$ and $\Delta m^2_{31}$ \cite{mass_hierarchy_discussion}\cite{Neutrino_Mass_Hierarchy_Vacuum_Oscillations_and_Vanishing_Ue3}.
+\end{comment}
 
 The nature of the neutrino hierarchy has major impacts on several areas. Within the inverted hierarchy, there is a lower bound on the Majorana mass of the electron neutrino mass. If neutrinoless double beta decay experiments can put bounds on the neutrino mass below this, the inverted hierarchy may be ruled out (under the assumption that neutrinos are Majorana in nature). Alternatively, if the inverted hierarchy is realised, neutrinoless double beta decay experiments are promising ways to determine whether neutrinos are Majorana particles or not. There are also a number of theories which predict either the normal or inverted hierarchy, so determining the hierarchy will be a strong motivator in determining the credibility of a given theory \cite{mass_hierarchy}.
 
@@ -810,7 +812,7 @@ The nature of the neutrino hierarchy has major impacts on several areas. Within 
 
 
 \newpage
-The best fit values for oscillation parameters and the \gls{cp} violating phase from a 3-flavour neutrino framework are shown in \TableRef{table:Best fit params} for both the normal and inverted hierarchy \footnote{The factor of 2 in the argument of $\sin^2{2\theta}$ is sometimes absorbed into the mixing angle as is the case for example in Figures \ref{fig:theta_21_deltamsq_21_best_fit}--\ref{fig:t2k_nova_CP}.}. The numbers have been provided by the 2020 edition of the \gls{pdg} collaboration \cite{PDG_2020}. 
+The best fit values for oscillation parameters and the \gls{cp} violating phase from a 3-flavour neutrino framework are shown in \TableRef{table:Best fit params} for both the normal and inverted hierarchy \footnote{The factor of 2 in the argument of $\sin^2{2\theta}$ is sometimes absorbed into the mixing angle as is the case for example in Figures \ref{fig:theta_21_deltamsq_21_best_fit}--\ref{fig:t2k_nova_CP}.}. The numbers have been provided by the 2020 edition of the \gls{pdg} collaboration \cite{PDG_2020}. Some of the experiments that have determined the oscillation parameters are discussed below. 
 
 \begin{table}[h!]
 \begin{tabular}{l ll}
