Updates from Overleaf

--- a/chap2-motivation_for_steriles.tex
+++ b/chap2-motivation_for_steriles.tex
@@ -600,7 +600,7 @@ This is the idea that underpins the \gls{katrin} which uses tritium as the nucle
 \begin{figure}[h!]
     \centering
     \includegraphics[width = \largefigwidth]{figures-chap2/Schematics-of-the-Katrin-experiment.png}
-    \caption{Schematic of the \gls{katrin} detector \cite{KATRIN_detector_figure}.}
+    \caption[Schematic of the \gls{katrin} detector.]{Schematic of the \gls{katrin} detector \cite{KATRIN_detector_figure}.}
     \label{fig:katrin_detector}
 \end{figure}
 
